--- a/Fisheye-main/package.json
+++ b/Fisheye-main/package.json
@@ -1,8 +1,9 @@
 {
     "devDependencies": {
-        "eslint": "^8.47.0"
+        "eslint": "^8.57.1",
+        "globals": "^15.12.0"
     },
     "scripts": {
-        "lint": "eslint --max-warnings=0 scripts/**/*.js"
+         "lint": "eslint scripts/**/*.js"
     }
 }
